<resources>
	<string name="app_name">WS Customer</string>
	<string name="notification_channel_id">default</string>
	<string name="products">Products</string>
	<string name="choose_product">Choose Product</string>
	<string name="select_product"> Click here to Search Product</string>
	<string name="click_search">Click here to Search</string>
	<string name="connect">Connect</string>
	<string name="qr_search">Scan</string>
	<string name="subTotal">Sub Total :</string>
	<string name="select_device">Select a device</string>
	<string name="select_option">Select option</string>
	<string name="scanning">Scanning for devices...</string>
	<string name="ble_not_supported">Bluetooth Low Energy not supported</string>
	<string name="scan">Scan</string>
	<string name="paired">paired</string>
	<string name="logout">Are you sure want to logout ?</string>
	<string name="yes">YES</string>
	<string name="alert_remove">Are you sure to remove the Entry?</string>
	<string name="alert_add">Are you sure to add the Entry?</string>
	<string name="productCount">Product count :</string>
	<string name="productPrice">Product price :</string>
	<string name="bill">Bill :</string>
	<string name="trip_start">Trip start</string>
	<string name="Customer">Customer</string>
	<string name="bills">Bills</string>
	<string name="Payment">Payment</string>
	<string name="Orderrrr">Orders</string>
	<string name="report">Invoices</string>
	<string name="noReport">No Invoices</string>
	<string name="trip_end">Trip end</string>
	<string name="Logout">Logout</string>
	<string name="home">Home</string>
	<string name="Customers">Customers</string>
	<string name="company_name">Company Name *</string>
	<string name="email_address">E-mail </string>
	<string name="company_address">Company Address *</string>
	<string name="contact_details">Contact Details  *</string>
	<string name="contact_person">Contact Person Name *</string>
	<string name="contact_mobileno">Mobile No *</string>
	<string name="Select_the_date">Select the date</string>
	<string name="tax_details">Tax Details *</string>
	<string name="tax_name">Tax Name *</string>
	<string name="gst">GST</string>
	<string name="edit">Edit</string>
	<string name="levelOne">Level One</string>
	<string name="levelTwo">Level Two</string>
	<string name="levelThree">Level Three</string>
	<string name="update">update</string>
	<string name="download">Download</string>
	<string name="tax_percentage">Percentage *</string>
	<string name="product_code">Product Code</string>
	<string name="uom">Choose UOM</string>
	<string name="tax_mode">Choose Tax Mode</string>
	<string name="choose_tax">Choose Tax</string>
	<string name="tax_exclusive">Exclusive</string>
	<string name="tax_inclusive">Inclusive</string>
	<string name="customer_code">Customer Code</string>
	<string name="choose_customer">Choose Customer</string>
	<string name="address_details">Address Details</string>
	<string name="street">Street</string>
	<string name="city">City</string>
	<string name="region">Region</string>
	<string name="region_no">Pleace enter region</string>
	<string name="region_alredy">Region already added</string>
	<string name="addLevel1">Pleace add region in Level 1</string>
	<string name="addLevel2">Pleace add district in Level 2</string>
	<string name="postcode">Postal Code</string>
	<string name="uom_name">Enter UOM Name</string>
	<string name="uom_short">Enter UOM Short Name</string>
	<string name="gst_no">Enter GSTIN Number</string>
	<string name="product_price">Enter product price</string>
	<string name="product_total_price">Price</string>
	<string name="product_tax_price">Tax Price</string>
	<string name="product_tax_value">Tax Amount</string>
	<string name="print">print</string>
	<string name="state_name">Choose State Name</string>
	<string name="customer">Click Search icon to Choose Customer</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="pay">Payment</string>
	<string name="total_pay">Total Payment </string>
	<string name="bill_no">Bill No</string>
	<string name="totalAmount">Total Amount</string>
	<string name="choose_gst">Choose GST</string>
	<string name="progress">Loading Please wait</string>
	<string name="fetch">Fetching data please wait…</string>
	<string name="user_name">User Name</string>
	<string name="prompt_password">Password (optional)</string>
	<string name="action_sign_in">Login</string>
	<string name="action_ok">OK</string>
	<string name="action_verify">Verify</string>
	<string name="customer_name">Customer  Name *</string>
	<string name="cus_name">Customer Name</string>
	<string name="tax">Tax</string>
	<string name="uom_add">UOM</string>
	<string name="product_name">Product Name </string>
	<string name="productName">product name</string>
	<string name="price">price</string>
	<string name="quantity">Qty</string>
	<string name="temp">Temp</string>
	<string name="printer_binding">Service binding &#8230;</string>
	<string name="hint_gender">Gender</string>
	<string name="hint_password">Password</string>
	<string name="hint_conform_password">Conform Password</string>
	<string name="male">Male</string>
	<string name="female">Fe-Male</string>
	<string name="btn_link_login">Get SIGN</string>
	<string name="hint_dob">D.O.B</string>
	<string name="action_settings">Settings</string>
	<string name="action_search">Search</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="nav_item_home">Home</string>
	<string name="nav_item_new_challan">New Challan</string>
	<string name="nav_item_view_history">View History</string>
	<string-array name="nav_drawer_labels">
		<item>@string/nav_item_home</item>
		<item>@string/nav_item_new_challan</item>
		<item>@string/nav_item_view_history</item>
	</string-array>
	<string name="title_viewHistory">View History</string>
	<string name="title_friends">New Challan</string>
	<string name="title_home">Home</string>
	<string name="title_customer">Customer</string>
	<string name="challan_details">Challan  Details:</string>
	<string name="challanno">Challan No</string>
	<string name="current_date">Current Date</string>
	<string name="officer">Officer Name *</string>
	<string name="jurisdiction">Jurisdiction *</string>
	<string name="vehicle_details">Vehicle Details *</string>
	<string name="vehicleno">Vehicle No *</string>
	<string name="vehicle_name">Vehicle Name *</string>
	<string name="vehicle_address">Vehicle Address *</string>
	<string name="driver_details">Driver  Details *</string>
	<string name="licenseno">License No *</string>
	<string name="license_name">License Name *</string>
	<string name="license_address">License  Address *</string>
	<string name="payment_details">Payment Details</string>
	<string name="action_details">Action  Taken *</string>
	<string name="spot_fine">Spot Fine Collected *</string>
	<string name="payment"> Choose Payment Mode * </string>
	<string name="fine_amount">Amount in \u20A8 *</string>
	<string name="rs">\u20A8</string>
	<string name="cash">CASH</string>
	<string name="choose_date">Choose Date</string>
	<string name="cheque_amount">Cheque Amount</string>
	<string name="unpaid">UNPAID</string>
	<string name="paid">PAID</string>
	<string name="court">COURT</string>
	<string name="remarks_details">Remarks Details *</string>
	<string name="remarks">Remarks *</string>
	<string name="phoneno">Phone No *</string>
	<string name="impound_details">Impound Details *</string>
	<string name="impound">Impound *</string>
	<string name="impound_location">Impound  Location *</string>
	<string name="offence_details">Offence &amp; Sec OF LAW *</string>
	<string name="offence_list">Choose Offence </string>
	<string name="offence_list_selected">Details </string>
	<string name="remove">Remove</string>
	<string name="no">No</string>
	<string name="choose_offence">Choose Offence</string>
	<string name="ok">OK</string>
	<string name="puls">+</string>
	<string name="amount">Amount:</string>
	<string name="total">Total :</string>
	<string name="cost">0 Rs</string>
	<string name="cancel">Cancel</string>
	<string name="pay_check">Payment</string>
	<string name="payment_mode">Payment Mode</string>
	<string name="pay_amount">Payment Amount</string>
	<string name="pay_cash">CASH</string>
	<string name="pay_cheque">CHEQUE</string>
	<string name="addSalesMan">Add Sales Man</string>
	<string name="cash_amount">Enter amount</string>
	<string name="cheque_no">Cheque No</string>
	<string name="cheque_date">Cheque Date</string>
	<string name="bank_no">Click here to Choose Bank Name</string>
	<string name="bank_name">Bank Name</string>
	<string name="welcomePage">Welcome !</string>
	<string name="no_network">No Network Available. Please enter Manually.</string>
	<string name="printing">Printing Successfully</string>
	<string name="string_alert_bill">Are you sure want to remove the bill</string>
	<string name="string_alert_product">Are you sure want to remove the product</string>
	<string name="string_alert_order">Are you sure want to remove the order</string>
	<string name="string_alert_payment">Are you sure want to remove the payment</string>
	<string name="string_alert_invoice">Are you sure want to remove the invoice?</string>
	<string name="new_payment">New Payment</string>
	<string name="submit">SUBMIT</string>
	<string name="preview">Preview</string>
	<string name="violator">Signature of the violator</string>
	<string name="Save">Save</string>
	<string name="savePrint">Save &amp; PRINT</string>
	<string name="t_bindok">Printer Initialized</string>
	<string name="t_unbinding">Printer Initializing &#8230;</string>
	<string name="challanNo">ChallanNo :DEMO3R233422</string>
	<string name="vehicleNo">VehicleNo : </string>
	<string name="currentDate"> Date : 23 Feb 2018</string>
	<string name="tnpolice">TN Police E-Challan Service</string>
	<string name="customersign">Violator Signature </string>
	<string name="officersign">Officer Signature</string>
	<string name="signature"> Signature *</string>
	<string name="previewChallanNo">Challan No : </string>
	<string name="previewDateTime">DateTime : </string>
	<string name="previewOfficerName">Issuing Officer : </string>
	<string name="previewJurisdiction">PS Jurisdiction :  </string>
	<string name="previewVehicleNo">Vehicle No :  </string>
	<string name="previewVehicleName">Vehicle Name :  </string>
	<string name="previewVehicleAddress">Vehicle Address : </string>
	<string name="previewLicenceNo">Licence No :  </string>
	<string name="previewLicenceName">Licence Name :  </string>
	<string name="previewLicenceAddress">Licence Address : </string>
	<string name="previewOffenceDetails">Details : </string>
	<string name="take_Photo">Take Photo</string>
	<string name="from_gallery">Choose from gallery</string>
	<string name="digits_number">0123456789 </string>
	<string name="ledgerBal">Ledger Balance :</string>
	<string name="enterBillNumber">Enter Bill Number</string>
	<string name="search">Search</string>
	<string name="bill_amount">Bill Amount</string>
	<string name="receivedAmount">Received Amount</string>
	<string name="proceedToPay">Proceed to pay</string>
	<string name="bill_date">Bill Date</string>
	<string name="net_amount">Net Amount</string>
	<string name="proceedToCancel">Proceed to cancel</string>
	<string name="statistics">Statistics</string>
	<string name="group_by">Group By</string>
	<string name="wavesunit">Unit</string>
	<string name="wavesvalue">Value</string>
	<string name="share">Share</string>
	<string name="whatsapp">Whatsapp</string>
	<string name="mail">E-mail</string>
	<string name="productDeveloped">&#169; SCOTO SYSTEC PVT LTD</string>
	<string name="newcompanyReg">New User</string>
	<string name="register">Register here</string>
	<string name="mobile_no">Enter Mobile Number</string>
	<string name="hint_mpin">Enter MPIN</string>
	<string name="forgot_mpin">Forgot MPIN?</string>
	<string name="verify_otp">Login using OTP</string>
</resources>