<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/billNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterBillNumber"
        android:paddingLeft="@dimen/space_6"
        android:padding="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:textSize="@dimen/space_12"
        android:background="@drawable/background_normal"/>

    <TextView
        android:id="@+id/textViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/billNo"
        android:layout_marginTop="@dimen/space_20"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:minHeight="@dimen/space_40"
        android:text="@string/search"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/space_16"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSearch"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/background_normal"
            android:layout_margin="@dimen/space_10"
            android:padding="@dimen/space_10"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textViewBillNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/space_12"
            android:minHeight="@dimen/space_30"
            android:text="@string/bill_no"/>

        <TextView
            android:id="@+id/textViewBillDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/space_12"
            android:text="@string/bill_date"
            android:layout_marginTop="@dimen/space_10"
            android:minHeight="@dimen/space_30"/>

        <TextView
            android:id="@+id/textViewCustomerCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/space_12"
            android:text="@string/customer_code"
            android:layout_marginTop="@dimen/space_10"
            android:minHeight="@dimen/space_30"/>

        <TextView
            android:id="@+id/textViewCustomerName"
            android:layout_width="match_parent"
            android:text="@string/customer_name"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/space_10"
            android:textSize="@dimen/space_12"
            android:minHeight="@dimen/space_30"/>

        <TextView
            android:id="@+id/textViewNetAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/space_10"
            android:textSize="@dimen/space_12"
            android:text="@string/net_amount"
            android:minHeight="@dimen/space_30"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:minHeight="@dimen/space_40"
        android:text="@string/proceedToCancel"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/space_16"
        android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>