<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/space_10"
    android:orientation="vertical">

    <TextView
        android:id="@+id/billAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:textSize="@dimen/space_16"
        android:layout_marginLeft="@dimen/space_20"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/ledgerBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ledgerBal"
        android:textSize="@dimen/space_16"
        android:layout_marginLeft="@dimen/space_20"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_mode"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:entries="@array/selectPaymentMode"
            android:background="@drawable/background_normal"
            android:minHeight="@dimen/space_40"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receivedAmount"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/space_40"
            android:layout_marginLeft="@dimen/space_10"
            android:paddingLeft="@dimen/space_5"
            android:paddingRight="@dimen/space_5"
            android:background="@drawable/background_normal"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/space_40"
        android:text="@string/proceedToPay"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/newColorPrimary"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_20"/>

</LinearLayout>